tests/src/Loader/classloader/generics/Instantiation/Negative/abstract01.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract01_abstract01_
    {
        [Fact]
        public void _generics_Instantiation_Negative_abstract01_abstract01_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract01\\abstract01.cmd");
        }
    }
}
